
WARNING: Until version `1.0.0` there is a greater possibility of breaking changes.

== `0.x` changes

=== `0.2.8` (in progress)

- [ADD] Updated microservices examples to export logs to Grafana Loki.
A `Logs` panel has been added to the `HTTP server instances` dashboard.
- Bump deps
* [MAINT] OpenTelemetry `1.40.0`, semconv `1.26.0-alpha`, instrumentation `2.6.0-alpha`
* [BREAK] Pedestal `0.7.0` in microservices examples.
Pedestal `0.7.0` introduces its own support for OpenTelemetry, including a new interceptor `io.pedestal.http.tracing/request-tracing-interceptor`.
This overlaps functionality with `clj-otel` interceptors, so should be disabled by setting `:io.pedestal.http/tracing` to `nil` in the Pedestal service map.

=== `0.2.7` (2024-07-01)

- Bump deps
* [MAINT] OpenTelemetry `1.39.0`
** [ADD] Support for creating and setting gauges that take measurements synchronously.
Use `steffan-westcott.clj-otel.api.metrics.instrument/set!` to synchronously set a gauge to a given measurement.
** [ADD] Option to set explicit bucket boundaries advice for histograms
** [ADD] `:links` option for `add-span-data!`
** [FIX] `metrics-by-route-interceptors` should record requests that have 404 HTTP response code
** [BREAK] Removed modules `clj-otel-exporter-jaeger-grpc` and `clj-otel-exporter-jaeger-thrift` as the Java libraries `opentelemetry-exporter-jaeger` and `opentelemetry-exporter-jaeger-thrift` are no longer published.
Jaeger has native support for OTLP, use `clj-otel-exporter-otlp` instead to configure an OTLP exporter.
** [BREAK] In module `clj-otel-exporter-zipkin`, `span-exporter` options `:sender` and `:encoder` now take `zipkin2.reporter.BytesMessageSender` and `zipkin2.codec.BytesEncoder` values
* [MAINT] Various build deps
- Refactored microservice examples
** [MAINT] Removed uberjar build step.
All application instances now use a `clojure` Docker image rather than custom image containing an uberjar.