@@ -26,13 +26,14 @@
    |`:timeout`                 | Maximum time to wait for export of a batch of spans. Value is either a `Duration` or a vector `[amount ^TimeUnit unit]` (default: 10s).
    |`:connect-timeout`         | Maximum time to wait for new connections to be established. Value is either a `Duration` or a vector `[amount ^TimeUnit unit]` (default: 10s).\n
    |`:retry-policy`            | Option map for retry policy, see `steffan-westcott.clj-otel.sdk.export/retry-policy` (default: retry disabled).
-   |`:meter-provider`          | ^MeterProvider to collect metrics related to export (default: metrics not collected)."
+   |`:meter-provider`          | ^MeterProvider to collect metrics related to export (default: metrics not collected).
+   |`:memory-mode`             | Either `:immutable-data` for thread safe or `:reusable-data` for non thread safe (but reduced) data allocations (default: `:immutable-data`)."
   (^OtlpGrpcSpanExporter []
    (span-exporter {}))
   (^OtlpGrpcSpanExporter
    [{:keys [endpoint headers trusted-certificates-pem client-private-key-pem client-certificates-pem
             ssl-context x509-trust-manager compression-method timeout connect-timeout retry-policy
-            ^MeterProvider meter-provider]}]
+            ^MeterProvider meter-provider memory-mode]}]
    (let [builder (cond-> (OtlpGrpcSpanExporter/builder)
                    endpoint (.setEndpoint endpoint)
                    headers (add-headers headers)
@@ -46,5 +47,6 @@
                    timeout (.setTimeout (util/duration timeout))
                    connect-timeout (.setConnectTimeout (util/duration connect-timeout))
                    retry-policy (.setRetryPolicy (export/retry-policy retry-policy))
-                   meter-provider (.setMeterProvider meter-provider))]
+                   meter-provider (.setMeterProvider meter-provider)
+                   memory-mode (.setMemoryMode (export/keyword->MemoryMode memory-mode)))]
      (.build builder))))
