@@ -28,13 +28,14 @@
    |`:connect-timeout`         | Maximum time to wait for new connections to be established. Value is either a `Duration` or a vector `[amount ^TimeUnit unit]` (default: 10s).
    |`:retry-policy`            | Option map for retry policy, see `steffan-westcott.clj-otel.sdk.export/retry-policy` (default: retry disabled).
    |`:proxy-options`           | Option map for proxy options, see `steffan-westcott.clj-otel.sdk.export/proxy-options` (default: no proxy used).
-   |`:meter-provider`          | ^MeterProvider to collect metrics related to export (default: metrics not collected)."
+   |`:meter-provider`          | ^MeterProvider to collect metrics related to export (default: metrics not collected).
+   |`:memory-mode`             | Either `:immutable-data` for thread safe or `:reusable-data` for non thread safe (but reduced) data allocations (default: `:immutable-data`)."
   (^OtlpHttpSpanExporter []
    (span-exporter {}))
   (^OtlpHttpSpanExporter
    [{:keys [endpoint headers trusted-certificates-pem client-private-key-pem client-certificates-pem
             ssl-context x509-trust-manager compression-method timeout connect-timeout retry-policy
-            proxy-options ^MeterProvider meter-provider]}]
+            proxy-options ^MeterProvider meter-provider memory-mode]}]
    (let [builder (cond-> (OtlpHttpSpanExporter/builder)
                    endpoint (.setEndpoint endpoint)
                    headers (add-headers headers)
@@ -49,5 +50,6 @@
                    connect-timeout (.setConnectTimeout (util/duration connect-timeout))
                    retry-policy (.setRetryPolicy (export/retry-policy retry-policy))
                    proxy-options (.setProxy (export/proxy-options proxy-options))
-                   meter-provider (.setMeterProvider meter-provider))]
+                   meter-provider (.setMeterProvider meter-provider)
+                   memory-mode (.setMemoryMode (export/keyword->MemoryMode memory-mode)))]
      (.build builder))))
